# spectrafold

./: README.md  pyproject.toml
examples/: README.md  hello_world_exact_6j.py
src/spectrafold/: __init__.py
src/spectrafold/core/: __init__.py  opcodes.py
src/spectrafold/molecular/: __init__.py
src/spectrafold/spectroscopy/: __init__.py  g2wall.py  pandya.py
tests/: test_opcodes.py
