[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectrafold"
version = "0.1.0"
description = "Exact diagrammatic calculus for spectroscopy — the Origami ISA for angular momentum recoupling"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ian R. C. Buckley", email = "ian.r.c.buckley@gmail.com" }]
keywords = [
    "spectroscopy",
    "racah-algebra",
    "6j-symbols",
    "angular-momentum",
    "nuclear-physics",
    "atomic-physics",
    "origami-calculus",
    "g2-wall",
    "exact-arithmetic",
    "categorical-quantum-mechanics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
requires-python = ">=3.10"
dependencies = [
    "sympy>=1.12",
]

[project.urls]
Homepage = "https://github.com/roguetrainer/spectrafold"
Repository = "https://github.com/roguetrainer/spectrafold"
Documentation = "https://roguetrainer.github.io/spectrafold/"

[project.optional-dependencies]
numerics = [
    "numpy>=1.24",
    "scipy>=1.11",
]
viz = [
    "matplotlib>=3.8",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "pymdown-extensions>=10.7",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spectrafold"]
